--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://farhatareek.github.io/e-commerce-assignmemt",
-  "name": "e-commerce-assignmemt",
+  "homepage": "http://farhatareek.github.io/talabat-app",
+  "name": "talabat-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
