--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://farhatareek.github.io/talabat-app",
-  "name": "talabat-app",
+  "homepage": "https://farhatareek.github.io/talbat",
+  "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
