--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://farhatareek.github.io/talbat",
-  "name": "e-commerce",
+  "homepage": "https://farhatareek.github.io/e-commercee.git",
+  "name": "e-commerce-assignmemt",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
