--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@mui/material": "^5.15.10",
     "@popperjs/core": "^2.11.6",
     "@react-oauth/google": "^0.4.0",
     "@reduxjs/toolkit": "^1.9.0",
@@ -38,6 +41,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "clean": "gh-pages-clean",
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build"
   },
